# sample_mcp_project

./: README.md  calculator_agent.py  main.py  pyproject.toml
prompts/: llm_prompts.py
